[gd_scene load_steps=8 format=3 uid="uid://bhobd3wwr36aw"]

[ext_resource type="Script" uid="uid://cd5qjmybs5t7u" path="res://scenes/gui/inventory/scripts/inventory_menu.gd" id="1_ppsqr"]
[ext_resource type="Texture2D" uid="uid://6ofolj0snqf4" path="res://sprites/items/items.png" id="1_tfrud"]
[ext_resource type="PackedScene" uid="uid://c6lexg25vsbfe" path="res://scenes/gui/inventory/inventory_slot.tscn" id="2_7u3g1"]
[ext_resource type="Script" uid="uid://c4es440yx8flu" path="res://scenes/gui/inventory/scripts/inventory_grid.gd" id="3_6vd2q"]
[ext_resource type="Resource" uid="uid://d2a3o2i6yp7dl" path="res://scenes/gui/inventory/player_inventory.tres" id="4_fmjv3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7u3g1"]
atlas = ExtResource("1_tfrud")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ppsqr"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_7u3g1")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="InventoryMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ppsqr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.16, 0.0613333, 0.517647)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -484.0
offset_right = 289.0
offset_bottom = -347.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "INVENTAIRE"
horizontal_alignment = 1

[node name="ItemDescription" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = 71.0
offset_right = 289.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 479.0
offset_top = 193.0
offset_right = 575.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Button_Save" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Button_Load" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
offset_left = 559.0
offset_top = 235.0
offset_right = 755.0
offset_bottom = 323.0
scale = Vector2(4, 4)
theme_override_styles/panel = SubResource("StyleBoxTexture_ppsqr")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
columns = 5
script = ExtResource("3_6vd2q")
inventory_data = ExtResource("4_fmjv3")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("2_7u3g1")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("2_7u3g1")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("2_7u3g1")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("2_7u3g1")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("2_7u3g1")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("2_7u3g1")]
layout_mode = 2

[node name="InventorySlot7" parent="Control/PanelContainer/GridContainer" instance=ExtResource("2_7u3g1")]
layout_mode = 2

[node name="InventorySlot8" parent="Control/PanelContainer/GridContainer" instance=ExtResource("2_7u3g1")]
layout_mode = 2

[node name="InventorySlot9" parent="Control/PanelContainer/GridContainer" instance=ExtResource("2_7u3g1")]
layout_mode = 2

[node name="InventorySlot10" parent="Control/PanelContainer/GridContainer" instance=ExtResource("2_7u3g1")]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4
